[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/Problem.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/game_controller.gd" type="Script" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/problem_generator.gd" type="Script" id=4]
[ext_resource path="res://scenes/GameUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/bg/bckg.png" type="Texture" id=6]
[ext_resource path="res://scenes/MainUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/parallax_background.gd" type="Script" id=8]
[ext_resource path="res://sprites/UI/arrow.png" type="Texture" id=9]
[ext_resource path="res://sprites/ground/ground_06.png" type="Texture" id=10]
[ext_resource path="res://sounds/Breezy's Mega Quest - 6 Stage 5.wav" type="AudioStream" id=11]
[ext_resource path="res://scenes/OperatorsUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/advice_generator.gd" type="Script" id=13]
[ext_resource path="res://scripts/game_data_handler.gd" type="Script" id=14]
[ext_resource path="res://scenes/AdviceUI.tscn" type="PackedScene" id=15]
[ext_resource path="res://scripts/audio_player.gd" type="Script" id=16]
[ext_resource path="res://scenes/PlayerScoreUI.tscn" type="PackedScene" id=17]

[node name="GameController" type="Node"]
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
script = ExtResource( 16 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 8 )
_N_ROWS = 13
_M_COLS = 3
_INIT_POS = Vector2( 288, -64 )
_CELL_DIM = Vector2( 64, 64 )
_TEXTURE = ExtResource( 10 )

[node name="bckg" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 352, 352 )
scale = Vector2( 0.6875, 2.2 )
texture = ExtResource( 6 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 768 )

[node name="Problem" parent="." instance=ExtResource( 1 )]

[node name="ProblemGenerator" type="Node" parent="."]
script = ExtResource( 4 )

[node name="GameDataHandler" type="Node" parent="."]
script = ExtResource( 14 )
_MAX_N_OK_ANS = 5
_N_LIVES = 2
_LVL = 1

[node name="AdviceGenerator" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Player" parent="." instance=ExtResource( 3 )]
visible = false

[node name="MainUI" parent="." instance=ExtResource( 7 )]
margin_top = -1.0
margin_bottom = -1.0

[node name="AboutButton" parent="MainUI" index="2"]
margin_top = 481.0
margin_bottom = 545.0

[node name="ScoresButton" parent="MainUI" index="3"]
margin_top = 353.0
margin_bottom = 417.0

[node name="OperatorsUI" parent="." instance=ExtResource( 12 )]
visible = false

[node name="GameUI" parent="." instance=ExtResource( 5 )]
visible = false

[node name="AdviceUI" parent="." instance=ExtResource( 15 )]
visible = false

[node name="PlayerScoreUI" parent="." instance=ExtResource( 17 )]
visible = false
margin_top = -1.0
margin_bottom = -1.0

[node name="LeftButton" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 64, 576 )
scale = Vector2( 2, 2 )
normal = ExtResource( 9 )
action = "ui_left"

[node name="RightButton" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 512, 576 )
scale = Vector2( 2, 2 )
normal = ExtResource( 9 )
action = "ui_right"

[connection signal="state_changed" from="." to="GameUI" method="_on_GameController_state_changed"]
[connection signal="state_changed" from="." to="ParallaxBackground" method="_on_GameController_state_changed"]
[connection signal="state_changed" from="." to="Player" method="_on_GameController_state_changed"]
[connection signal="state_changed" from="." to="Problem" method="_on_GameController_state_changed"]
[connection signal="state_changed" from="." to="GameDataHandler" method="_on_GameController_state_changed"]
[connection signal="state_changed" from="." to="AudioStreamPlayer" method="_on_GameController_state_changed"]
[connection signal="finished" from="AudioStreamPlayer" to="AudioStreamPlayer" method="_on_AudioStreamPlayer_finished"]
[connection signal="gone_inactive" from="Problem" to="Player" method="_on_Problem_gone_inactive"]
[connection signal="gone_inactive" from="Problem" to="ProblemGenerator" method="_on_Problem_gone_inactive"]
[connection signal="got_answered" from="Problem" to="Player" method="_on_Problem_got_answered"]
[connection signal="got_answered" from="Problem" to="GameDataHandler" method="_on_Problem_got_answered"]
[connection signal="problem_generated" from="ProblemGenerator" to="GameUI/AdviceButton" method="_on_ProblemGenerator_problem_generated"]
[connection signal="problem_generated" from="ProblemGenerator" to="GameUI" method="_on_ProblemGenerator_problem_generated"]
[connection signal="problem_generated" from="ProblemGenerator" to="Problem" method="_on_ProblemGenerator_problem_generated"]
[connection signal="problem_generated" from="ProblemGenerator" to="AdviceGenerator" method="_on_ProblemGenerator_problem_generated"]
[connection signal="got_end_score" from="GameDataHandler" to="PlayerScoreUI" method="_on_GameDataHandler_got_end_score"]
[connection signal="got_input" from="GameDataHandler" to="." method="get_input"]
[connection signal="level_changed" from="GameDataHandler" to="ProblemGenerator" method="_on_GameDataHandler_level_changed"]
[connection signal="lives_changed" from="GameDataHandler" to="GameUI" method="_on_GameDataHandler_lives_changed"]
[connection signal="score_changed" from="GameDataHandler" to="GameUI" method="_on_GameDataHandler_score_changed"]
[connection signal="speed_calculated" from="GameDataHandler" to="ParallaxBackground" method="_on_GameDataHandler_speed_calculated"]
[connection signal="speed_calculated" from="GameDataHandler" to="Problem" method="_on_GameDataHandler_speed_calculated"]
[connection signal="got_advice" from="AdviceGenerator" to="AdviceUI" method="_on_AdviceGenerator_got_advice"]
[connection signal="hit_finished" from="Player" to="Problem" method="_on_Player_hit_finished"]
[connection signal="button_down" from="MainUI/PlayButton" to="OperatorsUI" method="_on_PlayButton_button_down"]
[connection signal="button_down" from="MainUI/ScoresButton" to="MainUI" method="_on_ScoresButton_button_down"]
[connection signal="button_down" from="MainUI/ScoresButton" to="PlayerScoreUI" method="_on_ScoresButton_button_down"]
[connection signal="got_input" from="OperatorsUI" to="." method="get_input"]
[connection signal="got_operators_arr" from="OperatorsUI" to="ProblemGenerator" method="_on_OperatorsUI_got_operators_arr"]
[connection signal="start_pressed" from="OperatorsUI" to="GameUI" method="_on_OperatorsUI_start_pressed"]
[connection signal="button_down" from="OperatorsUI/BackMain" to="MainUI" method="_on_BackMain_button_down"]
[connection signal="got_input" from="GameUI" to="." method="get_input"]
[connection signal="button_down" from="GameUI/Back" to="OperatorsUI" method="_on_Back_button_down"]
[connection signal="got_input" from="GameUI/AdviceButton" to="AdviceGenerator" method="_on_AdviceButton_got_input"]
[connection signal="got_input" from="GameUI/AdviceButton" to="." method="get_input"]
[connection signal="got_input" from="AdviceUI" to="." method="get_input"]
[connection signal="button_down" from="PlayerScoreUI/Back" to="MainUI" method="_on_Back_button_down"]

[editable path="MainUI"]
[editable path="OperatorsUI"]
[editable path="GameUI"]
[editable path="PlayerScoreUI"]
